# GT-Thread

./: CMakeLists.txt  README.md  build.sh
gtthread/: CMakeLists.txt
gtthread/handler/: eventcallback.h
gtthread/looper/: looper.cpp
gtthread/task/: taskbase.h  taskdispatcherinterface.cpp  taskdispatcherinterface.h
gtthread/task/event/: eventdefine.h  eventiddefine.h  eventtemplate.cpp  eventtemplate.h
gtthread/task/work/: work.cpp  work.h
gtthread/thread/: thread.cpp
gtthread/timer/: timer.cpp  timer.h
gtthread/utils/: basictypes.h  location.cpp  location.h  utils.cpp  utils.h
handler/: eventhandler.cpp  eventhandler.h  eventhandlermanager.cpp  eventhandlermanager.h
looper/: looper.cpp  looper.h  loopermanager.cpp  loopermanager.h
task/: taskbase.cpp  taskqueue.cpp  taskqueue.h
task/event/: eventtemplate.h
thread/: thread.h
unittest/: CMakeLists.txt  event_test.cpp  eventhandler_test.cpp  main.cpp
utils/: location.cpp  location.h
